--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 VITE_GTAG_SCRIPT=
-VITE_LOGIN_API_HOST="http://localhost"
-VITE_RATE_API_HOST="http://localhost"
+VITE_LOGIN_API_HOST="https://cent-91f.pages.dev/"
+VITE_RATE_API_HOST="https://cent-91f.pages.dev/"
